unpackaged/main/default/objects/Campaign_Expenses__c/Campaign_Expenses__c.object-meta.xml
<CustomObject>
    <label>Campaign Expenses</label>
    <nameField>
        <label>Campaign Expenses Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>