unpackaged/main/default/objects/Campaign_Expenses__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>