unpackaged/main/default/objects/Campaign_Expenses__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <label>Invoice No.</label>
    <type>TextArea</type>
</CustomField>