unpackaged/main/default/objects/Campaign_Expenses__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <length>60</length>
    <type>Text</type>
</CustomField>